--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -6,27 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".auth.GetStartedActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="2"
-        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitXY"
-            android:src="@drawable/start" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/start"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintHeight_percent="0.6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <ScrollView
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/_10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/_15dp"
+        app:layout_constraintBottom_toTopOf="@+id/button">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/_15dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -68,13 +73,12 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
-                android:paddingLeft="@dimen/_25sp"
-                android:paddingRight="@dimen/_25sp"
                 android:text="@string/log"
                 android:textSize="20sp"
                 app:cornerRadius="@dimen/_5dp" />
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
+
 
     <ImageView
         android:id="@+id/button"
