--- a/app/src/main/res/layout/fragment_baby_monitoring.xml
+++ b/app/src/main/res/layout/fragment_baby_monitoring.xml
@@ -14,6 +14,10 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/breadcrumb"
+            layout="@layout/breadcrumb" />
+
+        <include
             android:id="@+id/inc_details"
             layout="@layout/baby_item" />
 
@@ -65,8 +69,7 @@
                             android:layout_alignParentStart="true"
                             android:padding="@dimen/padding_10"
                             android:text="@string/app_second_session"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                            android:textColor="@color/black" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/action_click_tips"
@@ -76,6 +79,7 @@
                             android:backgroundTint="@color/dim_red"
                             android:gravity="end"
                             android:text="@string/action_click_tips"
+                            android:textColor="@android:color/white"
                             app:cornerRadius="@dimen/_25sp" />
                     </RelativeLayout>
 
@@ -87,7 +91,7 @@
                     <androidx.fragment.app.FragmentContainerView
                         android:id="@+id/add_patient_container"
                         android:layout_width="match_parent"
-                        android:layout_height="500dp" />
+                        android:layout_height="700dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -103,7 +107,8 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/_5dp"
                             android:backgroundTint="@color/dim_red"
-                            android:text="@string/action_submit" />
+                            android:text="@string/action_submit"
+                            android:textColor="@android:color/white" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/btn_cancel"
