--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,8 +54,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height=".3dp"
-            android:layout_marginTop="15dp"
-            android:background="@color/colorPrimary" />
+            android:layout_marginTop="15dp" />
 
         <LinearLayout
             android:id="@+id/lyt_role"
@@ -70,8 +69,7 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="10dp"
                 android:padding="3dp"
-                android:src="@drawable/ic_baseline_account_box_24"
-                app:tint="@color/colorPrimary" />
+                android:src="@drawable/ic_baseline_account_box_24" />
 
             <TextView
                 android:layout_width="0dp"
@@ -79,7 +77,6 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="@string/action_role"
-                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -88,7 +85,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
             <ImageView
@@ -96,16 +92,14 @@
                 android:layout_height="30dp"
                 android:layout_marginEnd="5dp"
                 android:padding="5dp"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-                app:tint="@color/black" />
+                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
 
         </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height=".3dp"
-            android:layout_marginTop="15dp"
-            android:background="@color/colorPrimary" />
+            android:layout_marginTop="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,8 +113,7 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="10dp"
                 android:padding="3dp"
-                android:src="@drawable/ic_baseline_calendar_today_24"
-                app:tint="@color/colorPrimary" />
+                android:src="@drawable/ic_baseline_calendar_today_24" />
 
             <TextView
                 android:layout_width="0dp"
@@ -128,7 +121,6 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:text="@string/action_member"
-                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -137,7 +129,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
             <ImageView
@@ -145,8 +136,7 @@
                 android:layout_height="30dp"
                 android:layout_marginEnd="5dp"
                 android:padding="5dp"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-                app:tint="@color/black" />
+                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
 
         </LinearLayout>
 
@@ -178,7 +168,6 @@
                     android:layout_width="20sp"
                     android:layout_height="20sp"
                     android:background="@drawable/bg_round"
-                    android:backgroundTint="@color/colorPrimary"
                     android:rotation="180" />
 
                 <ImageView
@@ -187,7 +176,7 @@
                     android:layout_marginStart="7dp"
                     android:rotation="180"
                     android:src="@drawable/ic_baseline_arrow_right_alt_24"
-                    app:tint="@color/white" />
+                  />
 
             </RelativeLayout>
 
@@ -195,8 +184,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:text="Log out"
-                android:textColor="@color/colorPrimary" />
+                android:text="@string/log_out"  />
         </LinearLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
