--- a/app/src/main/res/layout/order_list_view.xml
+++ b/app/src/main/res/layout/order_list_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_5dp"
     android:orientation="horizontal"
-    android:weightSum="7">
+    android:weightSum="6">
 
     <TextView
         android:id="@+id/app_ip_number"
@@ -35,6 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:visibility="gone"
         android:text="@string/app_baby_age" />
 
     <TextView
