--- a/app/src/main/res/layout/tips_dialog.xml
+++ b/app/src/main/res/layout/tips_dialog.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="@dimen/_15dp"
     app:cardElevation="3dp">
 
@@ -67,7 +66,7 @@
                     android:padding="@dimen/_10dp"
                     android:weightSum="2">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="0.25"
@@ -115,7 +114,7 @@
                     android:padding="@dimen/_10dp"
                     android:weightSum="2">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="0.25"
@@ -162,8 +161,7 @@
                     android:orientation="horizontal"
                     android:padding="@dimen/_10dp"
                     android:weightSum="2">
-
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="0.25"
@@ -211,7 +209,7 @@
                     android:padding="@dimen/_10dp"
                     android:weightSum="2">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="0.25"
@@ -259,7 +257,7 @@
                     android:padding="@dimen/_10dp"
                     android:weightSum="2">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="0.25"
