--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
@@ -45,11 +45,16 @@
     <dimen name="spacing_mlarge">20dp</dimen>
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_25sp">25sp</dimen>
-    <dimen name="_45sp">45sp</dimen>
+    <dimen name="_45sp">40sp</dimen>
     <dimen name="_18sp">18sp</dimen>
     <dimen name="spacing_small">3dp</dimen>
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_20sp">20sp</dimen>
     <dimen name="spacing_xxlarge">50dp</dimen>
     <dimen name="_20dp">20dp</dimen>
+    <dimen name="design_bottom_navigation_item_max_width" tools:override="true">600dp</dimen>
+    <dimen name="design_bottom_navigation_active_item_max_width" tools:override="true">600dp</dimen>
+    <dimen name="_35sp">35sp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+
 </resources>
